# video_sdk

./: .gitignore  CMakeLists.txt  README.md  g813x-arm.txt  linux-arm.txt  videosamplebuild-arm.sh  videosamplebuild.sh
doc/: OneNet视频接入文档.docx
gm813x/: CMakeLists.txt  build-arm.sh  librtmp_send264.cpp  ont_list.c  ont_list.h  ont_video_play.c  sample_config.c  sample_config.h  send_queue.c  send_queue.h  video_sample_main.c  videosamplebuild-arm.sh
gm813x/include/: gmlib.h  librtmp_send264.h  sps_decode.h
gm813x/include/openssl/: opensslconf.h
gm813x/util/: start_eth.sh  start_wifi.sh
include/: config.h  config.h.in  device.h  error.h  log.h  ont_bytes.h  ont_platform_memory.h  ont_platform_persistence.h  (+9 more)
protocols/: CMakeLists.txt
protocols/base/: CMakeLists.txt  device.c  log.c  ont_base_common.h  ont_buffer.c  ont_buffer.h  ont_channel.h  ont_edp.h  ont_jtext.h  ont_list.c  ont_list.h  ont_modbus.h  ont_mqtt.h  ont_tcp_channel.c  ont_tcp_channel.h
protocols/base/parser/: macros.h  ont_pkt_formatter.c  ont_pkt_formatter.h  packet.c  packet.h  parser.c  parser.h  types.h
protocols/edp/: CMakeLists.txt  clean.sh  ont_edp.c  ont_edp_private.c  ont_edp_private.h
protocols/jtext/: CMakeLists.txt  jtext.c  packet.c  packet.h  types.h
protocols/modbus/: CMakeLists.txt  modbus.c  utils.c  utils.h
protocols/mqtt/: CMakeLists.txt  ont_mqtt.c  ont_mqtt_connect_flag.c  ont_mqtt_connect_flag.h  ont_mqtt_private.c  ont_mqtt_private.h  ont_qos_info.c  ont_qos_info.h
protocols/video/: CMakeLists.txt
protocols/video/live/: config.linux-with-shared-libraries
protocols/video/live/BasicUsageEnvironment/include/: BasicUsageEnvironment.hh
protocols/video/live/UsageEnvironment/include/: UsageEnvironment.hh
protocols/video/live/liveMedia/: RTCP.cpp  RTSPCommon.cpp
protocols/video/mp4v2/: CMakeLists.txt
protocols/video/mp4v2/include/mp4v2/: platform.h
protocols/video/mp4v2/libplatform/: platform_posix.h
protocols/video/mp4v2/libplatform/io/: FileSystem.h
protocols/video/mp4v2/project/: project.m4
protocols/video/ont/: CMakeLists.txt  ont_video_channel.c  ont_video_device_impl.c  ont_video_rtmp.c  ont_video_rvod.c  ont_video_rvod_dummy.c  ont_video_rvod_mp4.c
protocols/video/ont/cJSON/: cJSON.c
protocols/video/ont/librtmp/: amf.c  amf.h  bytes.h  dhgroups.h  handshake.h  hashswf.c  log.c  log.h  parseurl.c  rtmp.c  rtmp.h  rtmp_sys.h
protocols/video/onvif/: CMakeLists.txt  device_onvif.c  device_onvif.h  h264_parse.h  ont_onvif_if.h  ont_onvif_impl.cpp  ont_onvif_videoandiohandler.h  ont_onvif_videoaudiohandler.cpp
protocols/video/onvif/openssl-1.0.1g/include/openssl/: opensslconf.h
protocols/video/onvif/protocol/: namespace - 副本.h  soapC_003.c  soapC_004.c  soapC_006.c  soapC_009.c  soapC_010.c  soapC_013.c  soapC_015.c  soapC_018.c  soapC_021.c  soapC_023.c  soapC_024.c  soapC_026.c  soapC_027.c  soapC_029.c  soapC_030.c  soapC_033.c  soapC_034.c  soapC_035.c  soapC_036.c  soapC_037.c  soapC_039.c  soapC_040.c  soapC_041.c  soapC_043.c  soapC_044.c  soapC_045.c  soapC_046.c  soapC_049.c  soapC_051.c  soapC_052.c  soapC_053.c  soapC_054.c  soapC_057.c  soapC_059.c  soapC_060.c  soapC_061.c  soapC_063.c  soapC_064.c  soapC_065.c  (+7 more)
sample/: CMakeLists.txt  ont_list.c  ont_list.h  ont_packet_queue.cpp  ont_packet_queue.h  ont_video_play.c  sample_config.c  sample_config.h  status_sync.c  status_sync.h  video_onvif_dummy.c  video_record.cpp  video_record.h  video_record_dummy.c  video_rvod_dummy.c  video_rvod_mp4.c  video_rvod_mp4.h  video_sample_main.c
sample/edp/: CMakeLists.txt  Openssl.c  Openssl.h  sample-linux.c
sample/jtext/: CMakeLists.txt  sample-linux.c
sample/live/BasicUsageEnvironment/: BasicUsageEnvironment.cpp
sample/live/groupsock/: GroupsockHelper.cpp
sample/live/liveMedia/: GenericMediaServer.cpp  H263plusVideoStreamParser.cpp  MPEG1or2VideoRTPSink.cpp  MPEG1or2VideoStreamFramer.cpp  MPEG2TransportFileServerMediaSubsession.cpp  MPEG2TransportStreamFramer.cpp  MPEG4VideoStreamFramer.cpp  MatroskaFile.cpp  MediaSession.cpp  OggFile.cpp  OnDemandServerMediaSubsession.cpp  PassiveServerMediaSubsession.cpp  RTCP.cpp  RTSPClient.cpp  RTSPServer.cpp  VorbisAudioRTPSink.cpp
sample/modbus/: CMakeLists.txt  main.c
sample/mp4v2/src/: rtphint.cpp
sample/mqtt/: CMakeLists.txt  ont_mqtt_sample_main.c
sample/onvif/: CMakeLists.txt  device_onvif.c  device_onvif.h  h264_parse.h  ont_env.cpp  ont_env.h  ont_onvif_if.h  ont_onvif_impl.cpp  ont_onvif_videoandiohandler.h  ont_onvif_videoaudiohandler.cpp
sample/onvif/protocol/: namespace.h  soapC_001.c  soapC_002.c  soapC_011.c  soapC_012.c  soapC_013.c  soapC_016.c  soapC_020.c  soapC_028.c  soapC_031.c  soapC_038.c  soapC_042.c  soapC_048.c  soapC_055.c  soapC_062.c  soapC_070.c  soapClient.c  soapStub.h  stdsoap2.c
sample/videomp4/: CMakeLists.txt  ont_mqtt_sample_main.c  ont_mqtt_vide.h  ont_mqtt_video.c  ont_video_play.c
sample/videoonvif/: CMakeLists.txt  cJSON.c  ont_mqtt_sample_main.c  ont_mqtt_video.c  ont_video_play.c  sample_config.c  sample_config.h  status_sync.c  status_sync.h
sample/videosample/: CMakeLists.txt  buildgenerate.sh  ont_mqtt_sample_main.c  ont_mqtt_video.c  ont_packet_queue.cpp  ont_packet_queue.h  ont_video_play.c  sample_config.c  sample_config.h  status_sync.c  video_rvod_dummy.c  video_rvod_mp4.c
sample/videosample/live/: CMakeLists.txt
sample/videosample/live/UsageEnvironment/: UsageEnvironment.cpp
sample/videosample/live/liveMedia/: H264or5VideoStreamFramer.cpp
sample/videosample/mp4v2/src/: mp4atom.cpp
sample/videosample/onvif/: CMakeLists.txt  device_onvif.c  device_onvif.h  getifaddrs.c  getifaddrs.h  ont_onvif_if.h  ont_onvif_impl.cpp  ont_onvif_videoandiohandler.h  ont_onvif_videoaudiohandler.cpp
sample/videosample/onvif/protocol/: soapC_005.c  soapC_007.c  soapC_008.c  soapC_014.c  soapC_017.c  soapC_019.c  soapC_022.c  soapC_025.c  soapC_032.c  soapC_042.c  soapC_047.c  soapC_050.c  soapC_056.c  soapC_058.c  soapC_067.c  soapC_069.c  soapC_071.c  soapC_072.c  soapC_074.c  soapC_077.c  soapC_078.c
test/: CMakeLists.txt  main.c
(+49 files in other folders)
